<resources>
    <string name="app_name">FercStroy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_first">
        Мы работаем в сфере климатического оборудования и строительно-монтажных работ уже более 10 лет, поэтому с уверенностью можем сказать, что FERCSTROY - это Ваш надёжный партнёр в сфере строительства.</string>

    <string name="about_second">
        Наши вентиляционные установки изготавливаются на <b>собственной производственной площадке в Беларуси</b>. Сотрудники лаборатории постоянно проводят исследования и внедряют в производство новейшие разработки климатической техники.
        Для максимальной скорости и повышения качества мы предлагаем <b>полный спектр услуг по монтажу, пусконаладке и сервисному сопровождению на весь срок службы</b>. А для того, чтобы всегда быть рядом с Вами, мы разработали программу обучения по обслуживанию нашей техники. Благодаря чему, если в вашем регионе отсутствует сервисный центр FERCSTROY, то наши специалисты найдут партнёра и вместе пройдут процедуру авторизации.
    </string>
    <string name="timeline_2014">В начале своего пути мы занимались дистрибуцией промышленного климатического оборудования и инженерных систем от европейских производителей. Это позволило нам активно нарабатывать опыт реализации сложных решений и повышать нашу узнаваемость на рынке РБ.</string>
    <string name="timeline_2016">Мы создали направление строительно-монтажных работ и начали активно развивать сферу автоматизации, чтобы предоставить клиентам комплексное решение.</string>
    <string name="timeline_2018">Мы начали реализовывать оборудование для сложных фармацевтических объектов, производств ветеринарных препаратов, а так же объектов здравоохранения, где помимо поставок сложного климатического оборудования и чистых помещений, мы разрабатывали и внедряли автоматизированные системы управления технологическими процессами.</string>
    <string name="timeline_2020">Совместно с европейскими производителями мы создали хаб крупноузловой сборки и активно занялись разработкой собственного программного обеспечения.</string>
    <string name="timeline_2022">Открытие новых представительств позволило нам улучшить клиентский сервис и начать активно осваивать новые рынки. Помимо этого, мы начали разработку собственного бренда всей выпускаемой продукции под единой торговой маркой FERC.</string>
    <string name="timeline_2023">Став резидентами технопарка, мы  стали реализовывать собственный инвестиционный проект с целью масштабирования производства,  а также  получили  сертификаты собственного производства на выпускаемую продукцию. Произошло объединение всех юридических лиц в группу компаний FERCSTROY.</string>
    <string name="description_s">Серия S является основой выпускаемых нами вентиляционных установок и базируется на идеи максимальной свободы при проектировании вентиляционного агрегата. Мы предлагаем 31 типоразмер данной приточно-вытяжной установки — это максимальный показатель среди всех производителей вентиляционного оборудования. Такое количество типоразмеров позволяет найти оптимальное сечение, самые удобные габариты, а также достичь максимальной эффективности.</string>
</resources>